feat: enhance automated filtering system and final judgment output functionality
- Upgrade version from 0.1.2 to 0.1.3
- Implement enhanced automated filtering for more accurate results
- Improve final judgment output functionality
- Optimize performance for large dataset processing
- Update documentation with new features

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
+shining_pebbles>=0.5.3
+canonical_transformer>=0.2.4
 financial_dataset_preprocessor>=0.1.10
 scipy>=1.11.0
-canonical_transformer>=0.2.4
+openpyxl>=3.1.5
+requests>=2.31.0
+tqdm
